--- a/css/styles.css
+++ b/css/styles.css
@@ -537,7 +537,6 @@ body {
 }
 .label-box {
   position: relative;
-  overflow: hidden;
 }
 .label-content {
   position: absolute;
@@ -546,7 +545,12 @@ body {
   left: 0;
   font-size: 14px;
   text-transform: uppercase;
-  background-color: rgba(47, 48, 58, 0.8);
   color: #fff;
   font-weight: 700;
+  text-align: center;
+}
+.label-box p {
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
 }
