--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,10 @@ body {
   border: none;
   border-radius: 4px;
   margin-bottom: 106px;
+
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .primary-list {
   list-style-type: none;
@@ -506,14 +510,10 @@ body {
 
 .overlay-box {
   position: relative;
-  width: auto;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
   background-color: rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12);
+  /* box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12); */
 }
 .overlay-box:hover .overlay-content {
   transform: translatey(0);
@@ -534,23 +534,49 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   font-weight: 400;
+  padding-left: 24px;
 }
 .label-box {
   position: relative;
 }
 .label-content {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  bottom: 0%;
   font-size: 14px;
   text-transform: uppercase;
   color: #fff;
   font-weight: 700;
   text-align: center;
-}
-.label-box p {
   width: 370px;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
+}
+.modal {
+  background: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.modal-box {
+  position: absolute;
+  width: 528;
+  height: 581;
+  top: 50%;
+  left: 50%;
+  background: white;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+}
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  transition-delay: 500ms;
 }
