--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,7 @@ body {
   letter-spacing: 0.03em;
   font-weight: 400;
   padding-left: 24px;
+  padding-top: 49px;
 }
 .label-box {
   position: relative;
@@ -543,12 +544,15 @@ body {
   position: absolute;
   bottom: 0%;
   font-size: 14px;
+  line-height: 1.14;
   text-transform: uppercase;
   color: #fff;
   font-weight: 700;
   text-align: center;
-  width: 370px;
+  letter-spacing: 0.03em;
+  width: 100%;
   height: 70px;
+  padding: 27px;
   background-color: rgba(47, 48, 58, 0.8);
 }
 .modal {
@@ -561,8 +565,8 @@ body {
 }
 .modal-box {
   position: absolute;
-  width: 528;
-  height: 581;
+  width: 528px;
+  height: 581px;
   top: 50%;
   left: 50%;
   background: white;
@@ -579,4 +583,15 @@ body {
   visibility: hidden;
   opacity: 0;
   transition-delay: 500ms;
+}
+.modal-box button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  top: 8px;
+  right: 8px;
 }
