--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,21 @@ body {
 .nav-list a:hover {
   color: var(--light-blue);
 }
+.nav-list a {
+  position: relative;
+  color: var(--light-blue);
+}
+
+.nav-list a::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--light-blue);
+  border-radius: 2px;
+  top: 45px;
+}
 .contact-list {
   list-style: none;
   list-style-type: none;
