--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,22 @@ body {
 .nav-list a:hover {
   color: var(--light-blue);
 }
-.nav-list a {
+.nav-link-active {
   position: relative;
   color: var(--light-blue);
 }
 
-.nav-list a::after {
+/* .nav-link-active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--light-blue);
+  border-radius: 2px;
+  top: 45px;
+} */
+.nav-link-active:is(:hover, :focus)::after {
   content: "";
   position: absolute;
   display: block;
