--- a/css/styles.css
+++ b/css/styles.css
@@ -54,24 +54,31 @@ body {
   letter-spacing: 0.02em;
 }
 
-.nav-list a {
+.nav-link {
   font-size: 14px;
   color: #111;
   line-height: 1.14;
   font-weight: 500;
   text-decoration: none;
   letter-spacing: 0.03em;
+  position: relative;
 }
-.nav-list a:focus,
-.nav-list a:hover {
-  color: var(--light-blue);
+.nav-link:is(:hover, :focus) {
+  /* color: var(--light-blue); */
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--light-blue);
+  border-radius: 2px;
 }
 .nav-link-active {
   position: relative;
   color: var(--light-blue);
 }
 
-/* .nav-link-active::after {
+.nav-link-active::after {
   content: "";
   position: absolute;
   display: block;
@@ -80,8 +87,8 @@ body {
   background-color: var(--light-blue);
   border-radius: 2px;
   top: 45px;
-} */
-.nav-link-active:is(:hover, :focus)::after {
+}
+.nav-link:is(:hover, :focus)::after {
   content: "";
   position: absolute;
   display: block;
@@ -99,8 +106,8 @@ body {
   gap: 50px;
   letter-spacing: 0.02em;
 }
-.contact-list a:focus,
-.contact-list a:hover {
+/* .contact-list a:focus, */
+.contact-list:is(:hover, :focus) {
   color: var(--light-blue);
 }
 
