--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ body {
   height: 4px;
   background-color: var(--light-blue);
   border-radius: 2px;
+  top: 45px;
 }
 .nav-link-active {
   position: relative;
