--- a/css/styles.css
+++ b/css/styles.css
@@ -64,15 +64,7 @@ body {
   position: relative;
 }
 .nav-link:is(:hover, :focus) {
-  /* color: var(--light-blue); */
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--light-blue);
-  border-radius: 2px;
-  top: 45px;
+  color: var(--light-blue);
 }
 .nav-link-active {
   position: relative;
@@ -87,7 +79,7 @@ body {
   height: 4px;
   background-color: var(--light-blue);
   border-radius: 2px;
-  top: 45px;
+  top: 45.5px;
 }
 .nav-link:is(:hover, :focus)::after {
   content: "";
@@ -97,7 +89,7 @@ body {
   height: 4px;
   background-color: var(--light-blue);
   border-radius: 2px;
-  top: 45px;
+  top: 45.5px;
 }
 .contact-list {
   list-style: none;
