--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,7 @@ body {
   gap: 50px;
   letter-spacing: 0.02em;
 }
-/* .contact-list a:focus, */
-.contact-list:is(:hover, :focus) {
+.contact-list a:is(:hover, :focus) {
   color: var(--light-blue);
 }
 
@@ -537,8 +536,6 @@ body {
   position: relative;
   background-color: rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  /* box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12); */
 }
 .overlay-box:hover .overlay-content {
   transform: translatey(0);
@@ -587,6 +584,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  content: "scale(1.25)";
+  animation: 3000ms infinite 1000ms;
 }
 .modal-box {
   position: absolute;
@@ -619,4 +618,7 @@ body {
   cursor: pointer;
   top: 8px;
   right: 8px;
+}
+.modal.is-hidden .modal-box {
+  transform: translate(-50%, -50%) scale(0.1) rotate(180deg);
 }
