--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ body {
 }
 .contact-list a:is(:hover, :focus) {
   color: var(--light-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-contact {
@@ -112,10 +113,10 @@ body {
   text-decoration: none;
   fill: currentColor;
 }
-.nav-contact:hover {
+/* .nav-contact:hover {
   color: var(--light-blue);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .service {
   background-color: #2f303a;
   background-image: linear-gradient(
@@ -247,7 +248,7 @@ body {
 }
 .footer-mail:is(:hover, :focus) {
   color: var(--light-blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-portfolio {
   color: rgb(255, 255, 255, 0.6);
@@ -261,7 +262,7 @@ body {
 }
 .footer-mail-portfolio:is(:hover, :focus) {
   color: var(--light-blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-tel {
   text-decoration: none;
@@ -275,7 +276,7 @@ body {
 }
 .footer-tel:is(:hover, :focus) {
   color: var(--light-blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-studio {
   color: white;
@@ -389,7 +390,8 @@ body {
   border-radius: 4px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 3px 2px rgba(0, 0, 0, 0.1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container {
   width: 1200px;
@@ -460,7 +462,8 @@ body {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon > li > svg {
   fill: white;
@@ -492,15 +495,18 @@ body {
   border-radius: 4px;
   cursor: pointer;
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-list > li:is(:hover, :focus) {
   fill: var(--light-blue);
   border-color: var(--light-blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-list-item:hover {
   fill: var(--light-blue);
   border-color: var(--light-blue);
+  transition-property: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .primary-list-icons > svg {
   width: 270px;
@@ -513,11 +519,10 @@ body {
 }
 .team-icons > li:focus,
 .team-icons > li:hover {
-  cursor: pointer;
   fill: white;
   background-color: var(--light-blue);
-  border-radius: 50%;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-icons {
   display: flex;
@@ -532,6 +537,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .team-icons > li > svg {
   fill: gray;
@@ -539,7 +546,6 @@ body {
 
 .team-icons > li:is(:hover, :focus) > svg {
   fill: white;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-container {
   display: flex;
@@ -633,5 +639,5 @@ body {
   right: 8px;
 }
 .modal.is-hidden .modal-box {
-  transform: translate(-50%, -50%) scale(0.1) rotate(180deg);
+  transform: translate(-50%, -50%) scale(0.1) rotate(180deg) skew(180deg);
 }
